chore[hotswap]: update comment